@startuml

title __CA1's Class Diagram__\n

  namespace dtos {
    class dtos.AddressDTO {
    }
  }
  

  namespace dtos {
    class dtos.CityinfoDTO {
    }
  }
  

  namespace dtos {
    class dtos.HobbiesDTO {
    }
  }
  

  namespace dtos {
    class dtos.HobbyDTO {
    }
  }
  

  namespace dtos {
    class dtos.PersonDTO {
    }
  }
  

  namespace dtos {
    class dtos.PersonsDTO {
    }
  }
  

  namespace dtos {
    class dtos.PhoneDTO {
    }
  }
  

  namespace dtos {
    class dtos.PhonesDTO {
    }
  }
  

  namespace entities {
    class entities.Address {
    }
  }
  

  namespace entities {
    class entities.Cityinfo {
    }
  }
  

  namespace entities {
    class entities.Hobby {
    }
  }
  

  namespace entities {
    class entities.Person {
    }
  }
  

  namespace entities {
    class entities.Phone {
    }
  }
  

  namespace errorhandling {
    class errorhandling.ExceptionDTO {
    }
  }
  

  namespace errorhandling {
    class errorhandling.GenericExceptionMapper {
    }
  }
  

  namespace errorhandling {
    class errorhandling.PersonException {
    }
  }
  

  namespace facades {
    class facades.HobbyFacade {
    }
  }
  

  namespace facades {
    interface facades.IHobbyFacade {
    }
  }
  

  namespace facades {
    interface facades.IPersonFacade {
    }
  }
  

  namespace facades {
    class facades.PersonFacade {
    }
  }
  

  namespace facades {
    class facades.Populator {
    }
  }
  

  namespace rest {
    class rest.ApplicationConfig {
    }
  }
  

  namespace rest {
    class rest.Filter {
    }
  }
  

  namespace rest {
    class rest.HobbyResource {
    }
  }
  

  namespace rest {
    class rest.PersonResource {
    }
  }
  

  namespace utils {
    class utils.EMF_Creator {
    }
  }
  

  namespace utils {
    class utils.Utility {
    }
  }
  

  entities.Address o-- entities.Cityinfo : cityinfo
  entities.Cityinfo .up.|> java.io.Serializable
  entities.Hobby .up.|> java.io.Serializable
  entities.Person .up.|> java.io.Serializable
  entities.Person o-- entities.Address : address
  entities.Phone o-- entities.Person : person
  errorhandling.GenericExceptionMapper .up.|> javax.ws.rs.ext.ExceptionMapper
  facades.HobbyFacade .up.|> facades.IHobbyFacade
  facades.PersonFacade .up.|> facades.IPersonFacade
  rest.ApplicationConfig -up-|> javax.ws.rs.core.Application
  rest.Filter .up.|> javax.ws.rs.container.ContainerResponseFilter
  rest.HobbyResource o-- facades.HobbyFacade : hobbyFacade
  rest.PersonResource o-- facades.PersonFacade : personFacade


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
